force-app/main/default/objects/Vehicle__c/fields/ACRISS_Code__c.field-meta.xml
<CustomField>
    <fullName>ACRISS_Code__c</fullName>
    <label>ACRISS Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>