force-app/main/default/objects/Vehicle__c/fields/Actual_Infleet_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Infleet_2__c</fullName>
    <formula>Actual_Infleet_Day__c + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Infleet +2</label>
    <type>Date</type>
</CustomField>