force-app/main/default/objects/Vehicle__c/fields/Actual_Infleet_Day__c.field-meta.xml
<CustomField>
    <fullName>Actual_Infleet_Day__c</fullName>
    <label>Actual Infleet Day</label>
    <type>Date</type>
</CustomField>