force-app/main/default/objects/Vehicle__c/fields/aftermarketEquipmentPrice__c.field-meta.xml
<CustomField>
    <fullName>aftermarketEquipmentPrice__c</fullName>
    <label>Aftermarket Equipment Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>