force-app/main/default/objects/Vehicle__c/fields/Agreed_KM__c.field-meta.xml
<CustomField>
    <fullName>Agreed_KM__c</fullName>
    <label>Agreed KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>