force-app/main/default/objects/Vehicle__c/fields/Airbags__c.field-meta.xml
<CustomField>
    <fullName>Airbags__c</fullName>
    <description>Airbags, antal</description>
    <label>Airbags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>