force-app/main/default/objects/Vehicle__c/fields/Alarm__c.field-meta.xml
<CustomField>
    <fullName>Alarm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alarm</label>
    <type>Checkbox</type>
</CustomField>