force-app/main/default/objects/Vehicle__c/fields/AutoDesktop_Id__c.field-meta.xml
<CustomField>
    <fullName>AutoDesktop_Id__c</fullName>
    <description>vehicle ID in AutoDesktop</description>
    <inlineHelpText>vehicle ID in AutoDesktop</inlineHelpText>
    <label>AutoDesktop Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>