force-app/main/default/objects/Vehicle__c/fields/Automatic_gears__c.field-meta.xml
<CustomField>
    <fullName>Automatic_gears__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Autogear</description>
    <label>Automatic gears</label>
    <type>Checkbox</type>
</CustomField>