force-app/main/default/objects/Vehicle__c/fields/Automatic_Gears_Formula__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Gears_Formula__c</fullName>
    <description>system field to support Indicata export</description>
    <formula>IF( Automatic_gears__c, &apos;Automatisk&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>system field to support Indicata export</inlineHelpText>
    <label>Automatic</label>
    <type>Text</type>
</CustomField>