force-app/main/default/objects/Vehicle__c/fields/baseTax__c.field-meta.xml
<CustomField>
    <fullName>baseTax__c</fullName>
    <label>Base tax</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>