force-app/main/default/objects/Vehicle__c/fields/Batch_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Batch_Distribution__c</fullName>
    <label>Batch Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valutacar</fullName>
            </value>
            <value>
                <fullName>DK-car</fullName>
            </value>
            <value>
                <fullName>Mini-lease</fullName>
            </value>
            <value>
                <fullName>Full-tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>