force-app/main/default/objects/Vehicle__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <formula>TEXT(Vehicle_Batch__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Status</label>
    <type>Text</type>
</CustomField>