force-app/main/default/objects/Vehicle__c/fields/Battery_Capacity_kWh__c.field-meta.xml
<CustomField>
    <fullName>Battery_Capacity_kWh__c</fullName>
    <label>Battery Capacity (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>