force-app/main/default/objects/Vehicle__c/fields/Bluetooth__c.field-meta.xml
<CustomField>
    <fullName>Bluetooth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bluetooth</description>
    <label>Bluetooth</label>
    <type>Checkbox</type>
</CustomField>