force-app/main/default/objects/Vehicle__c/fields/Buyer_Account__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>