force-app/main/default/objects/Vehicle__c/fields/Buyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>