force-app/main/default/objects/Vehicle__c/fields/Buyer_Currency__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Currency__c</fullName>
    <formula>IF(ISPICKVAL(Buyer_Account__r.EUR_DKK__c, &apos;EUR&apos;), &apos;EUR&apos;, &apos;DKK&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Currency</label>
    <type>Text</type>
</CustomField>