force-app/main/default/objects/Vehicle__c/fields/Buyer_DAL_damage_check_required__c.field-meta.xml
<CustomField>
    <fullName>Buyer_DAL_damage_check_required__c</fullName>
    <formula>TEXT(Buyer_Account__r.Damage_check_at_DAL_is_required__c )</formula>
    <label>Buyer DAL damage check required</label>
    <type>Text</type>
</CustomField>