force-app/main/default/objects/Vehicle__c/fields/Buyer_delivery_address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_delivery_address__c</fullName>
    <description>The delivery address is chosen based on the region specified in the Station account.</description>
    <formula>CASE(1, 
    IF(ISPICKVAL(Station__r.Region__c,&quot;Sjælland&quot;),1,0), Buyer_Account__r.Buyer_delivery_address_Sj__c, 
				IF(ISPICKVAL(Station__r.Region__c,&quot;Jylland&quot;),1,0), Buyer_Account__r.Buyer_delivery_address_Jy__c,
NULL)</formula>
    <label>Buyer delivery address</label>
    <type>Text</type>
</CustomField>