force-app/main/default/objects/Vehicle__c/fields/Buyer_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Invoice_Amount__c</fullName>
    <formula>TEXT(
BLANKVALUE(Confirmed_Remarketing_Price_DKK__c,
    BLANKVALUE(Confirmed_Remarketing_Price_Full_Tax_DKK__c,
         Confirmed_Remarketing_Price_EUR__c
    )
)
)
+
/* add currency symbol */
IF(ISBLANK(Confirmed_Remarketing_Price_EUR__c), &apos; DKK&apos;, &apos; EUR&apos;)</formula>
    <label>Buyer Invoice Amount</label>
    <type>Text</type>
</CustomField>