force-app/main/default/objects/Vehicle__c/fields/Buyer_Navision_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Navision_Account_Number__c</fullName>
    <formula>Buyer_Account__r.Navision_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Navision Account Number</label>
    <type>Text</type>
</CustomField>