force-app/main/default/objects/Vehicle__c/fields/Calculator_period__c.field-meta.xml
<CustomField>
    <fullName>Calculator_period__c</fullName>
    <label>Calculator period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>