force-app/main/default/objects/Vehicle__c/fields/Car_description_2__c.field-meta.xml
<CustomField>
    <fullName>Car_description_2__c</fullName>
    <formula>TEXT(Brand__c) + &quot; &quot; +  Model__c + &quot; &quot; +  License_plate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car description</label>
    <type>Text</type>
</CustomField>