force-app/main/default/objects/Vehicle__c/fields/Car_description__c.field-meta.xml
<CustomField>
    <fullName>Car_description__c</fullName>
    <label>Car description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>