force-app/main/default/objects/Vehicle__c/fields/Car_docs__c.field-meta.xml
<CustomField>
    <fullName>Car_docs__c</fullName>
    <label>Car documents</label>
    <length>250</length>
    <type>Text</type>
</CustomField>