force-app/main/default/objects/Vehicle__c/fields/Car_remark__c.field-meta.xml
<CustomField>
    <fullName>Car_remark__c</fullName>
    <label>Car remark</label>
    <length>50</length>
    <type>Text</type>
</CustomField>