force-app/main/default/objects/Vehicle__c/fields/Check_for_Milage__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Milage__c</fullName>
    <label>Check for Milage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Min. is reached</fullName>
            </value>
            <value>
                <fullName>Max. is not exceeded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>