force-app/main/default/objects/Vehicle__c/fields/checkForDamage__c.field-meta.xml
<CustomField>
    <fullName>checkForDamage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Align with Damage tool</inlineHelpText>
    <label>Check for Damage</label>
    <type>Checkbox</type>
</CustomField>