force-app/main/default/objects/Vehicle__c/fields/checkForWinterTires__c.field-meta.xml
<CustomField>
    <fullName>checkForWinterTires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check for Winter Tires</label>
    <type>Checkbox</type>
</CustomField>