force-app/main/default/objects/Vehicle__c/fields/CO2__c.field-meta.xml
<CustomField>
    <fullName>CO2__c</fullName>
    <label>CO2 (g/km)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>