force-app/main/default/objects/Vehicle__c/fields/COBRA_Model__c.field-meta.xml
<CustomField>
    <fullName>COBRA_Model__c</fullName>
    <label>COBRA Model #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>