force-app/main/default/objects/Vehicle__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <label>Color</label>
    <length>15</length>
    <type>Text</type>
</CustomField>