force-app/main/default/objects/Vehicle__c/fields/Confirmed_Remarketing_Price_Converted__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Remarketing_Price_Converted__c</fullName>
    <description>system field to have remarketing price always in DKK and same type, so we can compare and sum vehicles</description>
    <formula>/* 1st use just regular Confirmed Remarketing Price (DKK) if exists */
BLANKVALUE(Confirmed_Remarketing_Price_DKK__c, 
		/* else use Confirmed Remarketing Price Full Tax if exists */
  BLANKVALUE(Confirmed_Remarketing_Price_Full_Tax_DKK__c,
		/* else use Confirmed Remarketing Price (EUR) and convert to DKK */				
		Confirmed_Remarketing_Price_EUR__c / $Setup.ConversionRate__c.DKK_to_EUR__c)
)</formula>
    <inlineHelpText>system field to have remarketing price always in DKK and same type, so we can compare and sum vehicles</inlineHelpText>
    <label>Confirmed Remarketing Price (Converted)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>