force-app/main/default/objects/Vehicle__c/fields/Confirmed_Remarketing_Price_EUR__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Remarketing_Price_EUR__c</fullName>
    <description>price that was confirmed with buyer, in case of EUR price</description>
    <inlineHelpText>price that was confirmed with buyer, in case of EUR price</inlineHelpText>
    <label>Confirmed Remarketing Price (EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>