force-app/main/default/objects/Vehicle__c/fields/Confirmed_Remarketing_Price_Full_Tax_DKK__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Remarketing_Price_Full_Tax_DKK__c</fullName>
    <description>price that was confirmed with buyer, for vehicles sell with VAT</description>
    <inlineHelpText>price that was confirmed with buyer, for vehicles sell with VAT</inlineHelpText>
    <label>Confirmed Remarketing Price Full Tax DKK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>