force-app/main/default/objects/Vehicle__c/fields/Contract_fee_batch__c.field-meta.xml
<CustomField>
    <fullName>Contract_fee_batch__c</fullName>
    <description>contract fee used on Batch calculator</description>
    <formula>IF(ISPICKVAL(Batch_Distribution__c, &quot;Valutacar&quot;),
			 Selected_Batch_Calculator__r.Contract_fee_Valuta__c,
    Selected_Batch_Calculator__r.Contract_fee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>contract fee used on Batch calculator</inlineHelpText>
    <label>Contract fee - Batch Calculator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>