force-app/main/default/objects/Vehicle__c/fields/Cost_for_period__c.field-meta.xml
<CustomField>
    <fullName>Cost_for_period__c</fullName>
    <formula>Selected_Vehicle_Calculator__r.Cost_for_period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>