force-app/main/default/objects/Vehicle__c/fields/Cost_per_month__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_month__c</fullName>
    <formula>Selected_Vehicle_Calculator__r.Cost_per_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>