force-app/main/default/objects/Vehicle__c/fields/Created_in_Navision_at__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Navision_at__c</fullName>
    <description>timestamp when the vehicle was created in Navision</description>
    <inlineHelpText>timestamp when the vehicle was created in Navision</inlineHelpText>
    <label>Created in Navision at</label>
    <type>DateTime</type>
</CustomField>