force-app/main/default/objects/Vehicle__c/fields/Current_city__c.field-meta.xml
<CustomField>
    <fullName>Current_city__c</fullName>
    <label>Current city</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>