force-app/main/default/objects/Vehicle__c/fields/Current_country__c.field-meta.xml
<CustomField>
    <fullName>Current_country__c</fullName>
    <label>Current country</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>