force-app/main/default/objects/Vehicle__c/fields/Current_fuel_level_eighth__c.field-meta.xml
<CustomField>
    <fullName>Current_fuel_level_eighth__c</fullName>
    <label>Current fuel level eighth</label>
    <length>250</length>
    <type>Text</type>
</CustomField>