force-app/main/default/objects/Vehicle__c/fields/Current_KM__c.field-meta.xml
<CustomField>
    <fullName>Current_KM__c</fullName>
    <label>Current KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>