force-app/main/default/objects/Vehicle__c/fields/Current_Month_in_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_in_Leasing__c</fullName>
    <description>based on registration date, shows in which month of leasing period the vehicle currently is</description>
    <formula>/* To find the number of months between two dates, subtract the year of the earlier date from the year of the later date and multiply the difference by 12. 
 * Next, subtract the month of the earlier date from the month of the later date, and add that difference to the value of the first set of operations. 
	* ((YEAR(date_1) - YEAR(date_2))*12) + (MONTH(date_1) - MONTH(date_2))
	*/
((YEAR(TODAY()) - YEAR(First_Registration_Date__c))*12) + (MONTH(TODAY()) - MONTH(First_Registration_Date__c))</formula>
    <inlineHelpText>based on registration date, shows in which month of leasing period the vehicle currently is</inlineHelpText>
    <label>Current Month in Leasing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>