force-app/main/default/objects/Vehicle__c/fields/Damage_checked_date__c.field-meta.xml
<CustomField>
    <fullName>Damage_checked_date__c</fullName>
    <label>Defleet damage checked date</label>
    <type>Date</type>
</CustomField>