force-app/main/default/objects/Vehicle__c/fields/Damagecheck_request_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Damagecheck_request_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Er der sendt mail og bestilt skadestjek?</description>
    <inlineHelpText>Er der sendt mail og bestilt skadestjek?</inlineHelpText>
    <label>Damagecheck request email sent</label>
    <type>Checkbox</type>
</CustomField>