force-app/main/default/objects/Vehicle__c/fields/Date_for_shipment_of_COC_document__c.field-meta.xml
<CustomField>
    <fullName>Date_for_shipment_of_COC_document__c</fullName>
    <label>Date for shipment of COC document</label>
    <type>Date</type>
</CustomField>