force-app/main/default/objects/Vehicle__c/fields/Date_for_shipment_of_Reg_attest__c.field-meta.xml
<CustomField>
    <fullName>Date_for_shipment_of_Reg_attest__c</fullName>
    <label>Date for shipment of Reg. attest</label>
    <type>Date</type>
</CustomField>