force-app/main/default/objects/Vehicle__c/fields/Date_for_shipment_of_spare_key__c.field-meta.xml
<CustomField>
    <fullName>Date_for_shipment_of_spare_key__c</fullName>
    <label>Date for shipment of spare key</label>
    <type>Date</type>
</CustomField>