force-app/main/default/objects/Vehicle__c/fields/Days_in_Operation__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Operation__c</fullName>
    <formula>TODAY() -  Actual_Infleet_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Operation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>