force-app/main/default/objects/Vehicle__c/fields/Deadline_for_Registration__c.field-meta.xml
<CustomField>
    <fullName>Deadline_for_Registration__c</fullName>
    <formula>Supplier_ready_Date__c + 28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline for Registration</label>
    <type>Date</type>
</CustomField>