force-app/main/default/objects/Vehicle__c/fields/Deadline_for_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Deadline_for_Registration_Date__c</fullName>
    <description>editable Deadline for Registration</description>
    <inlineHelpText>by default Supplier Ready Date + 4 weeks, can be manually edited</inlineHelpText>
    <label>Deadline for Registration</label>
    <type>Date</type>
</CustomField>