force-app/main/default/objects/Vehicle__c/fields/Dealer_contact__c.field-meta.xml
<CustomField>
    <fullName>Dealer_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer/Importer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles (Dealer contact)</relationshipLabel>
    <relationshipName>Vehicles2</relationshipName>
    <type>Lookup</type>
</CustomField>