force-app/main/default/objects/Vehicle__c/fields/Dealer_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Dealer_contact_email__c</fullName>
    <formula>Dealer_contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer contact email</label>
    <type>Text</type>
</CustomField>