force-app/main/default/objects/Vehicle__c/fields/Defleet_Coordinator_Comment__c.field-meta.xml
<CustomField>
    <fullName>Defleet_Coordinator_Comment__c</fullName>
    <label>Defleet Coordinator Comment</label>
    <type>TextArea</type>
</CustomField>