force-app/main/default/objects/Vehicle__c/fields/Defleet_damage_check_completed__c.field-meta.xml
<CustomField>
    <fullName>Defleet_damage_check_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defleet damage check completed</label>
    <type>Checkbox</type>
</CustomField>