force-app/main/default/objects/Vehicle__c/fields/Defleet_damage_checked_by__c.field-meta.xml
<CustomField>
    <fullName>Defleet_damage_checked_by__c</fullName>
    <label>Defleet damage checked by</label>
    <length>30</length>
    <type>Text</type>
</CustomField>