force-app/main/default/objects/Vehicle__c/fields/Defleet_key_reg_COC_done__c.field-meta.xml
<CustomField>
    <fullName>Defleet_key_reg_COC_done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defleet steps of key, de-registration and COC done</description>
    <label>Defleet key/reg/COC done</label>
    <type>Checkbox</type>
</CustomField>