force-app/main/default/objects/Vehicle__c/fields/Defleet_Pickup_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Defleet_Pickup_Location_Address__c</fullName>
    <description>system field to convert address to text used in Buyer invoice in NAV</description>
    <formula>Buyer_delivery_address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>system field to convert address to text used in Buyer invoice in NAV</inlineHelpText>
    <label>Defleet Pickup Location Address</label>
    <type>Text</type>
</CustomField>