force-app/main/default/objects/Vehicle__c/fields/Defleet_Pickup_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Defleet_Pickup_Location_Name__c</fullName>
    <formula>Pickup_Location__r.FirstName +&quot; &quot;+  Pickup_Location__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defleet Pickup Location Name</label>
    <type>Text</type>
</CustomField>