force-app/main/default/objects/Vehicle__c/fields/Defleet_Status__c.field-meta.xml
<CustomField>
    <fullName>Defleet_Status__c</fullName>
    <label>Defleet Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redying</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Order Damagecheck</fullName>
            </value>
            <value>
                <fullName>Invoice/Advis</fullName>
            </value>
            <value>
                <fullName>Defleet in COBRA</fullName>
            </value>
            <value>
                <fullName>Deregister in SKAT</fullName>
            </value>
            <value>
                <fullName>Send Documents &amp; Keys to buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>