force-app/main/default/objects/Vehicle__c/fields/Defleet_Transport_Booked__c.field-meta.xml
<CustomField>
    <fullName>Defleet_Transport_Booked__c</fullName>
    <label>Defleet Transport Booked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transport booked</fullName>
            </value>
            <value>
                <fullName>Awaiting payment</fullName>
            </value>
            <value>
                <fullName>Rebook transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>