force-app/main/default/objects/Vehicle__c/fields/Defleet_transportation_booked__c.field-meta.xml
<CustomField>
    <fullName>Defleet_transportation_booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defleet transportation booked</label>
    <type>Checkbox</type>
</CustomField>