force-app/main/default/objects/Vehicle__c/fields/Defleet_transportation_booked_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Defleet_transportation_booked_timestamp__c</fullName>
    <label>Defleet transportation booked timestamp</label>
    <type>Date</type>
</CustomField>