force-app/main/default/objects/Vehicle__c/fields/defleetReadyCheck__c.field-meta.xml
<CustomField>
    <fullName>defleetReadyCheck__c</fullName>
    <formula>IF(AND( Defleet_damage_check_completed__c =true,
 checkForWinterTires__c=true,
 Stickers_are_removed__c=true,
 Plates_are_removed__c=true
 ), &apos;Ready&apos;, &apos;Not Ready&apos;)</formula>
    <label>Defleet Ready Check</label>
    <type>Text</type>
</CustomField>