force-app/main/default/objects/Vehicle__c/fields/Delivery_cost__c.field-meta.xml
<CustomField>
    <fullName>Delivery_cost__c</fullName>
    <description>What is the delivery costs?</description>
    <inlineHelpText>What is the delivery costs?</inlineHelpText>
    <label>Delivery cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>