force-app/main/default/objects/Vehicle__c/fields/Delivery_cost_without_VAT__c.field-meta.xml
<CustomField>
    <fullName>Delivery_cost_without_VAT__c</fullName>
    <description>calculated Delivery cost without VAT, to be able to send it without VAT to Navision</description>
    <formula>/* remove 20% VAT from Delivery Cost */
Delivery_cost__c / (1+ $Setup.FleetManagementConfig__c.VAT_Percentage__c)</formula>
    <inlineHelpText>Delivery_cost__c / 1.2</inlineHelpText>
    <label>Delivery cost without VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>