force-app/main/default/objects/Vehicle__c/fields/Delivery_date_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_date_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery date confirmed ?</label>
    <type>Checkbox</type>
</CustomField>