force-app/main/default/objects/Vehicle__c/fields/deliveryCost__c.field-meta.xml
<CustomField>
    <fullName>deliveryCost__c</fullName>
    <label>Delivery Cost</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>