force-app/main/default/objects/Vehicle__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <defaultValue>115</defaultValue>
    <label>department</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>