force-app/main/default/objects/Vehicle__c/fields/Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation__c</fullName>
    <description>depreciation/amortization part of leasing cost per month</description>
    <inlineHelpText>depreciation part of leasing cost per month</inlineHelpText>
    <label>Depreciation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>