force-app/main/default/objects/Vehicle__c/fields/Deregistered_in_SKAT__c.field-meta.xml
<CustomField>
    <fullName>Deregistered_in_SKAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deregistered in SKAT</label>
    <type>Checkbox</type>
</CustomField>