force-app/main/default/objects/Vehicle__c/fields/Deregistered_in_SKAT_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Deregistered_in_SKAT_timestamp__c</fullName>
    <label>Deregistered in SKAT timestamp</label>
    <type>Date</type>
</CustomField>